# sosedka_a_v

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_prefix.cmake
prj.labs/: CMakeLists.txt
prj.labs/complex/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
prj.labs/long_int/: CMakeLists.txt  long_int.cpp  long_int.h
prj.labs/longmath/: CMakeLists.txt  longmath.cpp  longmath.h  main.cpp
prj.labs/rational/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
prj.test/: CMakeLists.txt
prj.test/test_complex/: CMakeLists.txt  test_complex.cpp
prj.test/test_long_int/: CMakeLists.txt  test_long_int.cpp
prj.test/test_rational/: CMakeLists.txt  test_rational.cpp
